fix login overflow

--- a/client/src/pages/Home/HomePage.module.scss
+++ b/client/src/pages/Home/HomePage.module.scss
@@ -23,6 +23,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    overflow: scroll;
 }
 
 .logo {
